Adding code to cleanup folder, run sim and zip results

--- a/DistributedAutomaticParameterTesting/Documentation/Distributed Automatic Parameter Test.tex
+++ b/DistributedAutomaticParameterTesting/Documentation/Distributed Automatic Parameter Test.tex
@@ -60,5 +60,9 @@ This is the configuration file for the main file.  It consists of key value pair
 \section{Run Test}
 To run you must simply type python main.py
 
+\section{How it works}
+When you run sheet.py you enter a while loop that breaks when either there are no more parameters or you have reached the maximum number of parameters to run as defined in config.txt.  At the beginning of the while loop block code checks to see if the DB has errors.  Currently this is just checking to see if the code has been running for more than the time given in config.txt.  Next the code fetches the next set of parameters to use.  
+
 
 \end{document}
+
